Closed
Bug 303909
Opened 20 years ago
Closed 20 years ago
Bookmarks bar's "Create New Folder..." in contextual menu has no further actions
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: froodian, Assigned: nick.kreeger)
Details
(Keywords: fixed1.8)
Attachments
(2 files)
|
2.12 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
|
23.71 KB,
application/octet-stream
|
Details |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050531 Camino/0.9+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050531 Camino/0.9+
The contextual menu in the bookmarks bar has a "Create New Folder..." option,
but the action performed is better described as "Create New Folder". The elipse
indicates further options to come (the folder's info floater would probably be
appropriate), but the action simply creates a folder titled "New Folder."
Either the elipse should be removed, or more options should be presented.
Reproducible: Always
Steps to Reproduce:
1. Control-click on Bookmarks bar
2. Select "Create New Folder..."
Comment 1•20 years ago
|
||
you're right. easy polish.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Camino1.0
| Assignee | ||
Comment 2•20 years ago
|
||
Updates the two places the localizable strings get called, also use the updated
Localizable.strings that are attached as seperate attachement.
Assignee: pinkerton → nick.kreeger
Attachment #194800 -
Flags: review?(pinkerton)
| Assignee | ||
Comment 3•20 years ago
|
||
Contains the string that gets rid of the "..."
Comment 4•20 years ago
|
||
Comment on attachment 194800 [details] [diff] [review]
Switches to use the name in Localizable.strings
sr=pink
Attachment #194800 -
Flags: review?(pinkerton) → superreview+
| Assignee | ||
Comment 5•20 years ago
|
||
Pink fixed something along the lines of this for other things.. maybe this was
fixed?
Comment 6•20 years ago
|
||
Fixed branch and trunk.
You need to log in
before you can comment on or make changes to this bug.
Description
•