Fix bug 303909: remove ellipsis from the "Create New Folder" context menu item on the bookmark bar. Patch partly by Nick Kreeger.